Fix 105824: Retiming remove gizmo size is fixed

Size was hardcoded to 14 pixels. Now it also conforms to strip size.
Minimum size is 40% of strip size, Otherwise it stays at 14px.